@@ -14,7 +14,7 @@ Diego Pierotto - Italian
 Laurent, Norman Obry - French
 Maciej Bieniek - Polish
 Максим Сёмочкин, i.nedoboy - Russian
-MaWi - German
+MaWi, rvs2008 - German
 yslandro - Norwegian Nynorsk
 王科峰 - Chinese
 Typhoon - Slovak
