@@ -20,94 +20,165 @@
   Translations from BoDEAN
 -->
 <resources>
-    <string name="about_feedback">Feedback:</string>
-    <string name="about_homepage">Homepage:</string>
-    <string name="about_ok">OK</string>
-    <string name="AboutText">KeePassDroid ist die Implementierung des KeePass password manager für die Android Plattform.</string>    
+    <string name="about_feedback">Supportanfrage:</string>
+    <string name="about_homepage">Webseite:</string>
+    <string name="about_ok">Ok</string>
+    <string name="AboutText">KeePassDroid ist die Implementierung des KeePass password manager für die Android Plattform.</string>
     <string name="about_twitter">Twitter:</string>
+    <string name="accept">Akzeptieren</string>
     <string name="add_entry">Eintrag hinzufügen</string>
     <string name="add_group">Gruppe hinzufügen</string>
     <string name="add_group_title">Gruppe hinzufügen</string>
     <string name="algorithm">Algorithmus</string>
     <string name="algorithm_colon">Algorithmus:</string>
     <string name="app_name">KeePassDroid</string>
-    <string name="cancel">Abbrechen</string>
-    <string name="ClearClipboard">Zwischenablage geleert.</string>
-    <string name="current_group">Aktuelle Gruppe: </string>
+    <string name="app_timeout">Anwendungssperre</string>
+    <string name="app_timeout_summary">Zeiteinstellung der Anwendungssperre während sie inaktiv ist.</string>
+    <string name="application">Anwendung</string>
+    <string name="application_settings">Einstellungen</string>
+    <string name="brackets">Klammern</string>
+    <string name="browser_intall_text">Um diese Funktion zu nutzen, bitten wir Sie einen externen Dateimanager herunterzuladen, welchen Sie über GooglePlay oder direkt von der Entwickler-Webseite herunterladen können. Aufgrund einiger Beschränkungen kann der Dateimanager nicht vollkommen genutzt werden.</string>
+    <string name="building_search_idx">Indexiere vor der Suche…</string>
+    <string name="cancel">Abbr.</string>
+    <string name="ClearClipboard">Zwischenablage geleert...</string>
+    <string name="clipboard_timeout">Zwischenablagesperre</string>
+    <string name="clipboard_timeout_summary">Zeiteinstellung der Zwischenablagesperre während sie inaktiv ist.</string>
+    <string name="copy_username">Benutzername in die Zwischenablage kopieren</string>
+    <string name="copy_password">Kennwort in die Zwischenablage kopieren</string>
+    <string name="creating_db_key">Datenbank-Schlüsseldatei erzeugen…</string>
+    <string name="current_group">Aktuelle Gruppe:</string>
     <string name="current_group_root">Start</string>
+    <string name="database">Datenbank</string>
+    <string name="decrypting_db">Entschlüsselung der Datenbankinhalte…</string>
+    <string name="decrypting_entry">Entschlüsselt</string>
+    <string name="default_checkbox">Als Standard-Datenbank benutzen</string>
+    <string name="digits">Zahlen</string>
+    <string name="disclaimer_formal">KeePassDroid © 2009–2012 Brian Pellin. Alle Rechte vorbehalten. Wir tragen keine Verantwortung und geben auch keine Garantie bei der Nutzung der Anwendung; Die Anwendung ist kostenlos und wird unter den GPL v2 (und weiteren Versionen) Bedingungen verbreitet.</string>
+    <string name="ellipsis">…</string>
     <string name="enter_filename">Dateinamen der Datenbank eingeben:</string>
-    <string name="entry_accessed">letzter Zugriff: </string>
-    <string name="entry_and_or">Passwort und/oder Schlüsseldatei, zum entschlüsseln Ihrer Datenbank, eingeben:</string>
+    <string name="entry_accessed">Letzter Zugriff:</string>
+    <string name="entry_and_or">Kennwort und/oder Schlüsseldatei, zum entschlüsseln Ihrer Datenbank, eingeben:</string>
     <string name="entry_cancel">Abbrechen</string>
-    <string name="entry_comment">Kommentar: </string>
-    <string name="entry_confpassword">Passwort bestätigen:</string>
-    <string name="entry_created">Erstellt: </string>
-    <string name="entry_expires">Läuft ab: </string>
+    <string name="entry_comment">Notiz:</string>
+    <string name="entry_confpassword">Kennwort wiederholen:</string>
+    <string name="entry_created">Erstellt:</string>
+    <string name="entry_expires">Läuft ab:</string>
     <string name="entry_keyfile">Schlüsseldatei (optional)</string>
-    <string name="entry_modified">letzte Bearbeitung: </string>
-    <string name="entry_password">Passwort:</string>
+    <string name="entry_modified">Letzte Anderung:</string>
+    <string name="entry_password">Kennwort:</string>
     <string name="entry_save">Speichern</string>
-    <string name="entry_title">Titel: </string>
-    <string name="entry_url">URL: </string>
-    <string name="entry_user_name">Benutzername: </string>
+    <string name="entry_title">Titel:</string>
+    <string name="entry_url">URL:</string>
+    <string name="entry_user_name">Benutzername:</string>
+    <string name="error_arc4">Die Arc4-Chiffre wird nicht unterstützt.</string>
     <string name="error_can_not_handle_uri">KeePassDroid kann diese Adresse nicht verarbeiten.</string>
     <string name="error_could_not_create_group">Fehler beim erstellen der Gruppe.</string>
+    <string name="error_could_not_create_parent">Verzeichnis konnte nicht erstellt werden.</string>
     <string name="error_database_exists">Die Datei existiert bereits.</string>
     <string name="error_database_settings">Fehler beim ermitteln der Datenbankeinstellungen.</string>
     <string name="error_failed_to_launch_link">Konnte Verknüpfung nicht starten.</string>
     <string name="error_filename_required">Ein Dateiname wird benötigt.</string>
     <string name="error_file_not_create">Konnte Datei nicht erstellen:</string>
+    <string name="error_invalid_db">Ungültige Datenbank.</string>
+    <string name="error_invalid_path">Ungültiger Pfad.</string>
     <string name="error_no_name">Ein Name wird benötigt.</string>
-    <string name="error_nopass">Ein Passwort oder eine Schlüsseldatei wird benötigt.</string>
-    <string name="error_pass_match">Die Passwörter stimmen nicht überein.</string>
+    <string name="error_nopass">Ein Kennwort oder eine Schlüsseldatei wird benötigt.</string>
+    <string name="error_out_of_memory">Der Speicher Ihres Smartphones reicht nicht aus, um die Datenbank zu analysieren. Sie ist wahrscheinlich zu groß.</string>
+    <string name="error_pass_gen_type">Mindestens ein Kennwort-Generierungstyp muss ausgewählt werden</string>
+    <string name="error_pass_match">Die Kennwörter stimmen nicht überein.</string>
     <string name="error_rounds_not_number">Anzahl der Wiederholungen muss eine Zahl sein.</string>
+    <string name="error_rounds_too_large">Maximale Wiederholungsanzahl ist 2147483648.</string>
     <string name="error_title_required">Ein Titel wird benötigt.</string>
+    <string name="error_wrong_length">Tragen Sie eine benötigte Zahllänge in das Feld ein</string>
     <string name="FileNotFound">Datei nicht gefunden.</string>
+    <string name="file_browser">Dateimanager</string>
+    <string name="generate_password">Kennwort erzeugen</string>
     <string name="group">Gruppe</string>
-    <string name="hint_comment">Kommentar</string>
-    <string name="hint_conf_pass">Passwort bestätigen</string>
+    <string name="hint_comment">Notiz</string>
+    <string name="hint_conf_pass">Kennwort wiederholen</string>
+    <string name="hint_generated_password">Erzeugtes Kennwort</string>
     <string name="hint_group_name">Name der Gruppe</string>
     <string name="hint_keyfile">Schlüsseldatei</string>
-    <string name="hint_pass">Passwort</string>
+    <string name="hint_length">Länge</string>
+    <string name="hint_pass">Kennwort</string>
     <string name="hint_title">Name</string>
     <string name="hint_url">Adresse</string>
     <string name="hint_username">Benutzername</string>
-    <string name="InvalidPassword">Passwort oder Schlüsseldatei ist falsch.</string>
-    <string name="loading_database">Lade Datenbank&#8230;</string>
+    <string name="install_from_market">GooglePlay</string>
+    <string name="install_from_website">Webseite</string>
+    <string name="InvalidPassword">Kennwort oder Schlüsseldatei ist falsch.</string>
+    <string name="invalid_db_sig">Datenbank-Format wurde nicht erkannt.</string>
+    <string name="length">Länge</string>
+    <string name="list_size_title">Gruppenliste</string>
+    <string name="list_size_summary">Schriftgröße der Gruppenliste</string>
+    <string name="loading_database">Lade Datenbank…</string>
+    <string name="lowercase">Kleinbuchstaben</string>
     <string name="MaskedPassword">*****</string>
+    <string name="maskpass_title">Kennwort verstecken</string>
+    <string name="maskpass_summary">Standardmäßig Kennwörter verstecken</string>
     <string name="menu_about">Über</string>
-    <string name="menu_change_key">Datenbankpasswort ändern</string>
-    <string name="menu_copy_pass">Passwort kopieren</string>
+    <string name="menu_change_key">Datenbank-Kennwort ändern</string>
+    <string name="menu_copy_pass">Kennwort kopieren</string>
     <string name="menu_copy_user">Benutzername kopieren</string>
     <string name="menu_create">Erstellen</string>
+    <string name="menu_app_settings">Einstellungen</string>
     <string name="menu_db_settings">Einstellungen</string>
     <string name="menu_delete">Löschen</string>
     <string name="menu_donate">Spenden</string>
-    <string name="menu_edit">Bearbeiten</string>
-    <string name="menu_hide_password">Passwort verstecken</string>
-    <string name="menu_homepage">Zur Hompage</string>
+    <string name="menu_edit">Ändern</string>
+    <string name="menu_hide_password">Kennwort verstecken</string>
+    <string name="menu_homepage">Webseite</string>
     <string name="menu_lock">Datenbank sperren</string>
     <string name="menu_open">Öffnen</string>
     <string name="menu_rename">Umbenennen</string>
     <string name="menu_search">Suchen</string>
     <string name="menu_url">URL öffnen</string>
-    <string name="never">Niemals</string>
+    <string name="minus">Bindestrich</string>
+    <string name="never">Nie</string>
     <string name="no_keys">Keine Einträge in dieser Datenbank oder Gruppe.</string>
     <string name="no_results">Keine Suchergebnisse</string>
     <string name="no_url_handler">Kann mit dieser Url nicht umgehen.</string>
     <string name="open_recent">Zuletzt geöffnete Datenbank (Klicken zum Öffnen):</string>
+    <string name="omitbackup_title">"Papier-/Sicherungskorb nicht durchsuchen"</string>
+    <string name="omitbackup_summary">"Gelöschte Dateien des Papier-/Sicherungskorbs werden bei der Suche nicht berücksichtigt"</string>
     <string name="pass_filename">KeePass Datenbankdatei:</string>
     <string name="pass_ok">Ok</string>
-    <string name="password_title">Datenbankpasswort eingeben</string>
-    <string name="progress_create">Neue Datenbank anlegen&#8230;</string>
-    <string name="progress_title">In Bearbeitung&#8230;</string>
+    <string name="password_title">Datenbank-Kennwort eingeben</string>
+    <string name="progress_create">Neue Datenbank anlegen…</string>
+    <string name="progress_title">In Bearbeitung…</string>
+    <string name="remember_keyfile_summary">Schlüsseldatei anlegen und ihr Speicherort merken</string>
+    <string name="remember_keyfile_title">Schlüsseldatei speichern</string>
+    <string name="remove_from_filelist">Löschen</string>
     <string name="rijndael">Rijndael (AES)</string>
     <string name="root">Start</string>
     <string name="rounds">Wiederholungen</string>
     <string name="rounds_explaination">Höhere Wiederholungsanzahl steigert den Schutz gegen Brute-Force Angriffe, sie bremsen aber auch das laden und speichern der Datenbank.</string>
     <string name="rounds_hint">Verschlüsslungs-Wiederholungen</string>
-    <string name="saving_database">Speichere Datenbank&#8230;</string>
-    <string name="search_hint">Titel/Beschreibung des Eintrags</string>
+    <string name="saving_database">Speichere Datenbank…</string>
+    <string name="space">Leerzeichen</string>
     <string name="search_label">Suchen</string>
-    <string name="show_password">Passwort anzeigen</string>
+    <string name="show_password">Kennwort anzeigen</string>
+    <string name="sort_name">Sortieren nach Name</string>
+    <string name="sort_db">Sortieren nach Erstellung</string>
+    <string name="special">Spezialsymbole</string>
+    <string name="search_hint">Titel/Beschreibung des Eintrags</string>
+    <string name="twofish">Twofish</string>
+    <string name="underline">Unterstrichen</string>
+    <string name="unsupported_db_version">Datenbank-Version wird nicht unterstützt.</string>
+    <string name="uppercase">Großbuchstaben</string>
+    <string name="warning_read_only">Der Speicherort hat nur Lese-Rechte. Zum Speichern ist er nicht geeignet, darum ist es unmöglich letzte Änderungen zu sichern.</string>
+    <string name="warning_unmounted">Ihre SD-Karte ist derzeit nicht Ihrem Smartphone. Die Anwendung ist nicht in der Lage Ihre Datenbank zu speicher oder zu öffnen.</string>
+    <string name="version_label">Version:</string>
+
+    <string-array name="clipboard_timeout_options">
+        <item>30 Sekunden</item>
+        <item>1 Minute</item>
+        <item>5 Minuten</item>
+        <item>Nie</item>
+    </string-array>
+    <string-array name="list_size_options">
+        <item>Klein</item>
+        <item>Mittel</item>
+        <item>Groß</item>
+    </string-array>
 </resources>
