@@ -1,4 +1,5 @@
  * Updated Hungarian translations from intel
+ * Updated German translations from rvs2008
 
 KeePassDroid (1.9.15)
  * Fix compatibility with desktop KeePass 2.20
